xeto: disallow instance names to start with upper case
- this gives us a future proof way to ensure that acme::Foo is a type and acme::bar is an instance
- for now reserve index/Index for documentation (might be too limiting long term)

--- a/src/test/testXeto/tests/compileErrs.yaml
+++ b/src/test/testXeto/tests/compileErrs.yaml
@@ -132,25 +132,31 @@ verifyErrs: |
 ##########################################################################
 
 ---
+name: "reservedSpecNames"
+compileLib: |
+  Index: {}
+verifyErrs: |
+  Spec name 'Index' is reserved
+---
 name: "reservedInstanceNames"
 compileLib: |
-  @toc: {}
+  @index: {}
   @pragma: {}
   @doc-overview: {}
+  @Foo: {}
+  @123-456: {ok}
 verifyErrs: |
-  Instance name 'toc' is reserved
+  Instance name 'index' is reserved
   Instance name 'pragma' is reserved
   Instance name 'doc-overview' is reserved
+  Instance name 'Foo' is invalid
 ---
 name: "dupTops"
 compileLib: |
   Foo: Dict
-  Bar: Dict
   @foo: {}
-  @Bar: {}
 verifyErrs: |
   Spec 'Foo' conflicts with instance of the same name
-  Spec 'Bar' conflicts with instance of the same name
 ---
 name: "checkTypeInherit"
 compileLib: |
