--- a/src/test/testXeto/tests/sys.yaml
+++ b/src/test/testXeto/tests/sys.yaml
@@ -73,6 +73,7 @@ verifyType:
     doc: "sys::Str Integer or floating point numbers annotated with an optional unit"
     sealed: "sys::Marker"
     val: "sys::Number 0"
+    pattern: sys::Str (-?(?:0|[1-9]\d*)(?:\.\d+)?(?:[eE][+-]?\d+)?[a-zA-Z%_/$\P{ASCII}]*|"(?:NaN|-?INF)")
 ---
 name: "int"
 loadLib: "sys"
