testXeto fix TestSuite.test sys.duration

--- a/src/test/testXeto/tests/sys.yaml
+++ b/src/test/testXeto/tests/sys.yaml
@@ -109,6 +109,7 @@ verifyType:
     sealed: "sys::Marker"
     val: "sys::Duration 0sec"
     quantity: "sys::UnitQuantity time"
+    pattern: "inherit"
 ---
 name: "uri"
 loadLib: "sys"
