convert4: use new design during conversion from trio, add partial solution to fix from 4.0.4 design

--- a/etc/convert4/config.props
+++ b/etc/convert4/config.props
@@ -9,7 +9,7 @@ libPrefix=hx
 ignore=axon,hx
 
 // comma separated tags to include directly in func meta versus defMeta
-funcMeta=customMeta1, customMeta2
+funcMeta=energyBaselineFunc, energyNormFunc
 
 // depend versions by lib prefix
 depend.sys=BuildVar "ph.depend"
